--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav class="header-nav">
           <ul class="site-nav list">
             <li class="list-item">
-              <a class="nav-link" href="./index.html">Студія</a>
+              <a class="nav-link " href="./index.html">Студія</a>
             </li>
             <li class="list-item">
               <a class="nav-link" href="./portfolio.html">Портфоліо</a>
@@ -162,6 +162,7 @@
 
           <ul class="list staff">
             <li class="staff-img">
+              <div class="staff-box">
               <img
                 src="./images/img_igor.jpg"
                 alt="Студія"
@@ -231,8 +232,11 @@
                   </li>
                 </ul>
               </div>
+            </div>
             </li>
+          
             <li class="staff-img">
+              <div class="staff-box">
               <img
                 src="./images/img_olga.jpg"
                 alt="Студія"
@@ -302,8 +306,10 @@
                   </li>
                 </ul>
               </div>
+            </div>
             </li>
             <li class="staff-img">
+              <div class="staff-box">
               <img
                 src="./images/img_mykola.jpg"
                 alt="Студія"
@@ -373,8 +379,10 @@
                   </li>
                 </ul>
               </div>
+            </div>
             </li>
             <li class="staff-img">
+              <div class="staff-box">
               <img
                 src="./images/img_myhailo.jpg"
                 alt="Студія"
@@ -444,6 +452,7 @@
                   </li>
                 </ul>
               </div>
+            </div>
             </li>
           </ul>
         </div>
@@ -513,16 +522,16 @@
             >Web<span class="footer-logo-decor">Studio</span></a
           >
           <ul class="list footer-nav">
-            <li>
-              <a href="" class="contacts">м. Київ, пр-т Лесі Українки, 26</a>
+            <li class="contacts">
+              <a href="" >м. Київ, пр-т Лесі Українки, 26</a>
             </li>
-            <li>
-              <a href="mailto:info@devstudio.com" class="contacts"
+            <li class="contacts">
+              <a href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
-              <a href="tel:+380961111111" class="contacts">+380 96 111 11 11</a>
+            <li class="contacts">
+              <a href="tel:+380961111111" >+380 96 111 11 11</a>
             </li>
           </ul>
         </address>
