--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
         <section class="section">
           <container>
           <ul class="list portfolio-nav">
-            <li><button type="button" class="portfolio-button">Усі</button></li>
+            <li><button type="button" class="portfolio-button button-all">Усі</button></li>
             <li><button type="button" class="portfolio-button">Веб-сайти</button></li>
             <li><button type="button" class="portfolio-button">Додатки</button></li>
             <li><button type="button" class="portfolio-button">Дизайн</button></li>
